--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,4 +28,6 @@ jobs:
         run: echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" > ~/.npmrc
 
       - name: Publish to GitHub Package Registry
-        run: npm publish --registry=https://npm.pkg.github.com/
+        run: |
+            cd published-dist
+            npm publish --registry=https://npm.pkg.github.com/
