--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,10 @@
   "publishConfig": {
     "@gmelum:registry": "https://npm.pkg.github.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GMELUM/ews"
+},
   "peerDependencies": {
     "solid-js": "^1.7.12"
   }
