--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,26 +6,22 @@ on:
       - main
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      id-token: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
 
       - name: Publish to GitHub Packages
         working-directory: ./dist 
-        run: |
-          npm config set @gmelum:registry=https://npm.pkg.github.com:_authToken=${{secrets.GITHUB_TOKEN}}
-          npm publish --access public
+        env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run:  npm publish --provenance --access public
