--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,29 +6,28 @@ on:
       - main
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      
+      - run: npm ci
 
-      - name: Install dependencies
-        run: npm install
+      # Build project and copy necessary files to dist
+      - run: npm run build
 
-      - name: Build project
-        run: npm run build
-
-      - name: Configure npm for publishing
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-
-      - name: Publish to npm Registry
-        working-directory: ./dist
+      # Publish only the `dist` folder
+      - run: npm publish --provenance --access public
+        working-directory: dist  # Specify the working directory as `dist`
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --access public
