--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
     "name": "@elum/ws",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "type": "module",
     "scripts": {
-        "build": "vite build --config config/vite.solid.config.ts"
+        "build:solid": "vite build --config config/vite.solid.config.ts",
+        "tsc:solid": "rollup --config config/rollup.solid.config.ts --configPlugin @rollup/plugin-typescript",
+        "build": "npm run build:solid && npm run tsc:solid"
     },
     "devDependencies": {
         "@msgpack/msgpack": "^3.0.0-beta3",
+        "@rollup/plugin-typescript": "^12.1.2",
         "@types/node": "^22.13.0",
         "rollup": "^4.34.0",
         "rollup-plugin-copy": "^3.5.0",
+        "rollup-plugin-dts": "^6.1.1",
+        "rollup-plugin-web-worker-loader": "^1.7.0",
         "solid-js": "^1.9.4",
         "terser": "^5.37.0",
+        "tslib": "^2.8.1",
+        "typescript": "^5.7.3",
         "vite": "^6.0.11",
+        "vite-plugin-dts": "^4.5.0",
         "vite-plugin-solid": "^2.11.0"
     }
 }
