--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       
-      - run: npm ci
+      - run: npm i
 
       # Build project and copy necessary files to dist
       - run: npm run build
