--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "url": "git+https://github.com/GMELUM/ews"
   },
   "peerDependencies": {
-    "solid-js": "^1.7.12"
+    "solid-js": "^1.7.12",
+    "@msgpack/msgpack": "^3.0.0"
   }
 }
