--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@msgpack/msgpack": "^3.0.0-beta3",
         "@rollup/plugin-typescript": "^12.1.2",
         "@types/node": "^22.13.0",
+        "jsdom": "^26.1.0",
+        "mock-socket": "^9.3.1",
         "rollup": "^4.34.0",
         "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-dts": "^6.1.1",
@@ -20,6 +22,7 @@
         "typescript": "^5.7.3",
         "vite": "^6.0.11",
         "vite-plugin-dts": "^4.5.0",
-        "vite-plugin-solid": "^2.11.0"
+        "vite-plugin-solid": "^2.11.0",
+        "vitest": "^3.2.4"
     }
 }
