--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elum/ws",
+    "name": "@elum/ews",
     "type": "module",
     "scripts": {
         "build:solid": "vite build --config config/vite.solid.config.ts",
